--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "express-rate-limit": "^7.2.0",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.5",
+    "uuid": "^10.0.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
+    "@prisma/client": "^5.16.0",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "@types/nodemon": "^1.19.6",
+    "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
     "tsnodemon": "^1.2.2"
   }
