fluentd fix loggin

--- a/configs/fluent-bit.conf
+++ b/configs/fluent-bit.conf
@@ -8,11 +8,25 @@
     Name          forward
     Listen        0.0.0.0
     Port          24224
+    Tag           nodejs-app
+
+[FILTER]
+    Name          parser
+    Match         *
+    Key_Name      log
+    Parser        json
+    Reserve_Data  True
+
+[FILTER]
+    Name          modify
+    Match         *
+    Remove_regex  ^[0-9]$
 
 [OUTPUT]
     Name          loki
     Match         *
     Host          loki
     Port          3100
-    labels        job=fluentbit
+    Labels        job=fluentbit 
+    Line_Format   json
     auto_kubernetes_labels on
