--- a/configs/parsers.conf
+++ b/configs/parsers.conf
@@ -2,4 +2,4 @@
     Name        json
     Format      json
     Time_Key    timestamp
-    Time_Format %Y-%m-%dT%H:%M:%S.%L%z
+    Time_Format %Y-%m-%d %H:%M:%S
