--- a/configs/loki-config.yaml
+++ b/configs/loki-config.yaml
@@ -1,67 +1,55 @@
+# Disable multi-tenancy, ensuring a single tenant for all log streams.
 auth_enabled: false
 
 server:
   http_listen_port: 3100
+  log_level: info
 
-ingester:
-  wal:
-    dir: "/tmp/wal"
+limits_config:
+  volume_enabled: true
+  allow_structured_metadata: true
+  retention_period: 2160h
 
-  lifecycler:
-    address: 127.0.0.1
-    ring:
-      kvstore:
-        store: inmemory
-      replication_factor: 1
-    final_sleep: 0s
-  chunk_idle_period: 5m
-  chunk_retain_period: 30s
-  max_transfer_retries: 0
+common:
+  instance_addr: 127.0.0.1
+  path_prefix: /loki
+  storage:
+    filesystem:
+      chunks_directory: /loki/chunks
+      rules_directory: /loki/rules
+
+  replication_factor: 1
+  ring:
+    kvstore:
+      store: inmemory
+
+compactor:
+  retention_enabled: true
+  retention_delete_delay: 30m
+  delete_request_store: filesystem
+  compaction_interval: 10m
 
 schema_config:
   configs:
     - from: 2020-10-24
-      store: boltdb-shipper
+      store: tsdb
       object_store: filesystem
-      schema: v11
+      schema: v13
       index:
         prefix: index_
         period: 24h
 
-storage_config:
-  boltdb_shipper:
-    active_index_directory: /loki/index
-    cache_location: /loki/cache
-    shared_store: filesystem
-  filesystem:
-    directory: /loki/chunks
+ruler:
+  alertmanager_url: http://localhost:9093
 
-compactor:
-  working_directory: /loki/working_directory
-  shared_store: filesystem
+#analytics:
+#  reporting_enabled: false
 
-limits_config:
-  enforce_metric_name: false
-  reject_old_samples: true
-  reject_old_samples_max_age: 168h
+ingester:
+  wal:
+    enabled: true
+    dir: /loki/wal # Directory to store the WAL files
+    checkpoint_duration: 5m # Interval between checkpoints
+    flush_on_shutdown: true # Flush WAL on shutdown
+    replay_memory_ceiling: 256MB # Maximum memory used during replay
 
-chunk_store_config:
-  max_look_back_period: 0s
-
-table_manager:
-  retention_deletes_enabled: false
-  # retention_period: 2160h
-
-  # index_tables_provisioning:
-  #   provisioned_write_throughput: 10
-  #   provisioned_read_throughput: 5
-  #   inactive_write_throughput: 1
-  #   inactive_read_throughput: 1
-  #   retention_period: 2160h
-
-  # chunk_tables_provisioning:
-  #   provisioned_write_throughput: 20
-  #   provisioned_read_throughput: 10
-  #   inactive_write_throughput: 1
-  #   inactive_read_throughput: 1
-  #   retention_period: 2160h
