--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "nodemon": "^3.1.0",
+    "socket.io": "^4.7.5",
     "typescript": "^5.4.5",
     "uuid": "^10.0.0",
     "winston": "^3.13.0"
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "@types/nodemon": "^1.19.6",
+    "@types/socket.io": "^3.0.2",
     "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
     "tsnodemon": "^1.2.2"
