--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "nodemon": "^3.1.0",
+    "pino": "^9.4.0",
     "typescript": "^5.4.5",
     "uuid": "^10.0.0",
     "winston": "^3.13.0"
